Refactor stream operations to use toList()
This commit pdates various classes to replace Collectors.toList() with the new
List.of() method for improved readability.